# DrTinder

./: .codeclimate.yml  .env  .env~  .gitignore  .gitignore~  .gitmodules  .jscsrc  .travis.yaml  .travis.yml  AndroidChangelog.md  Dockerfile  Gruntfile.js  INSTALL  INSTRUCTIVO-DOCKER  README.md  androidIndex.html  androidProjectWiki.html  androidUserManual.html  androidWikiCompilereq.html  androidWikiDevelopreqst.html  androidWikiExternalLibs.html  build.gradle  cpyHTML.sh  createDB.sql  dataFormater.js  genindex.html  gradle.properties  index.html  index.js  objects.inv  package.json  package.json~  packages.html  pgdatasearch.js  queryCreator.js  resolveQuerys.js  search.html  searchindex.js  startServer.sh
_sources/: androidIndex.txt  androidProjectWiki.txt  index.txt  packages.txt
_sources/android/: compile.txt  development.txt  index.txt  libraries.txt  userManual.txt
_sources/appServer/: api.txt  config.txt  implementacion.txt  index.txt  knownBugs.txt
_sources/sharedServer/: dbDiagram.txt  userManual.txt
_static/coverage/: index-sort-f.html  index-sort-l.html  index.html
_static/coverage/Servidor/: ChatDatabaseManager.cpp.func-sort-c.html  ChatDatabaseManager.cpp.func.html  ChatDatabaseManager.h.func.html  DatabaseManager.cpp.func.html  DatabaseManager.cpp.gcov.html  Interests.cpp.func-sort-c.html  Interests.cpp.gcov.html  Interests.h.func-sort-c.html  Interests.h.func.html  Interests.h.gcov.html  LikesDatabaseManager.cpp.func-sort-c.html  LikesDatabaseManager.cpp.func.html  LikesDatabaseManager.cpp.gcov.html  LikesDatabaseManager.h.func-sort-c.html  LikesDatabaseManager.h.func.html  MessageHandler.cpp.func-sort-c.html  MessageHandler.cpp.func.html  MessageHandler.h.func.html  MessageHandler.h.gcov.html  RequestHandler.cpp.func-sort-c.html  RequestHandler.cpp.gcov.html  ServerUtils.cpp.func-sort-c.html  ServerUtils.cpp.func.html  ServerUtils.cpp.gcov.html  SharedServerClient.cpp.func-sort-c.html  SharedServerClient.cpp.func.html  SharedServerClient.cpp.gcov.html  Tokenizer.cpp.func.html  Tokenizer.cpp.gcov.html  User.cpp.func-sort-c.html  User.cpp.func.html  XMPPMessageHandler.cpp.func-sort-c.html  XMPPMessageHandler.cpp.func.html  XMPPMessageHandler.cpp.gcov.html  XMPPServer.cpp.func-sort-c.html  XMPPServer.cpp.func.html  XMPPServer.cpp.gcov.html  index-sort-f.html  main.cpp.func.html
_static/coverage/boost/: aligned_storage.hpp.func.html  index-sort-l.html  (+8 more)
android/: compile.html  development.html  index.html  libraries.html  userManual.html
app/: build.gradle  google-services.json.enc
appServer/: Docker.html  api.html  buildSinDocker.html  config.html  coverage.html  implementacion.html  index.html  knownBugs.html
code/: dataFormater.js  proccess.js  processCallbacks.js  queryCreator.js  queryDatabase.js  resolveQuerys.js  validator.js
code/interestPhotos/: getInterestPhoto.js
config/: quality.gradle
doc/TechnicalDoc/: Makefile
doc/UserDoc/: Makefile  UserManual.tex
docker-server-run/: Dockerfile  Dockerfile.bck  Dockerfile.rpi
gradle/: quality.gradle
public/: chosen.html  functionality.js
public/scripts/: base64decoder.js  functionality.js  httprequest.js  modify_profile.js  prueba_animacion.js  show_img.js
public/stylesheets/: animations.css  main.css  tabla.css
sharedServer/: dbDiagram.html  documentation.html  index.html  userManual.html
source/: AppServer.cbp  Client.cpp  Client.h  Dockerfile  MakefileCliente  MakefileServidor  Server.cpp  Server.h  XMPPServer.cpp  XMPPServer.h  client_main.cpp  hello.cpp  main  main.cpp
source/Cliente/: Client.h  MakefileCliente  client_main  client_main.cpp
source/Servidor/: CMakeLists.txt  ChatDatabaseManager.cpp  ChatDatabaseManager.h  DatabaseManager.cpp  DatabaseManager.h  HttpResponse.cpp  HttpResponse.h  Interests.cpp  Interests.h  LikesDatabaseManager.cpp  LikesDatabaseManager.h  MakefileServidor  MessageHandler.cpp  MessageHandler.h  Parser.cpp  Parser.h  RequestHandler.cpp  RequestHandler.h  Server.cpp  Server.h  ServerUtils.cpp  ServerUtils.h  SharedServerClient.cpp  SharedServerClient.h  Tokenizer.cpp  Tokenizer.h  User.cpp  User.h  UserMock.cpp  UserMock.h  UsersDatabase.cpp  UsersDatabase.h  XMPPMessageHandler.cpp  XMPPMessageHandler.h  XMPPServer.cpp  XMPPServer.h  api_constants.h  api_constants_client.h  api_constants_shared.h  api_server_constants.h  (+4 more)
source/Servidor/Handlers/: Handler.cpp  Handler.h  chatHandler.cpp  chatHandler.h  friendsHandler.cpp  friendsHandler.h  interestHandler.cpp  interestHandler.h  userHandler.cpp  userHandler.h  usersHandler.cpp  usersHandler.h
source/Servidor/Parsers/: CsvParser.cpp  CsvParser.h  JsonParser.cpp  JsonParser.h  UserParser.cpp  UserParser.h
source/Servidor/logCnfgs/: debug.conf  default.conf  info.conf
source/Servidor/matches/: UserMatcher.cpp  UserMatcher.h
source/Servidor/tests/: CMakeLists.txt~  ServerAPITest.py  client.py  databasesTest.h  deleteUser.py  interestTest.h  main.cpp  messageHandlerTest.h  myTest.py  parserTest.h  serverUtilsTest.h  setUpDataBase.h  sharedServerTest.h  testDatabaseNames.h  tokenizerTest.h  userMatcherTest.h
source/Servidor/tests/testPython/: AppAPITest.py  ShAPITest.py  succesiveRequests.py
source/Servidor/tests/testPython/Clients/: client.py  clientApp.py  clientShared.py
tests/: img.py  testsAPI.py  testsAPI.py~
views/pages/: db.ejs  index.ejs  index.ejs~
views/partials/: header.ejs  header.ejs~  nav.ejs  nav.ejs~  nav.html  nav.html~
(+1370 files in other folders)
